<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FView"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <LinearLayout
        style="@style/VView"
        android:padding="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mobile" />

        <TextView
            style="@style/WView"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:text="@string/txt_title"
            android:textColor="@color/colorTxt"
            android:textSize="17sp" />

        <TextView
            style="@style/WView"
            android:layout_gravity="start"
            android:layout_marginTop="6dp"
            android:text="@string/txt_description"
            android:textColor="@color/colorTxt"
            android:textSize="14sp" />

        <LinearLayout
            style="@style/WLView"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/checkbox_include_address"
                style="@style/WLView"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:text="@string/txt_include_my_address"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/checkbox_include_profile"
                style="@style/WLView"
                android:padding="10dp"
                android:text="@string/txt_include_my_profile"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            style="@style/WLView"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/check_clear"
                style="@style/WLView"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:text="@string/txt_clear"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/checkbox_include_custom_color"
                style="@style/WLView"
                android:padding="10dp"
                android:text="@string/txt_custom_color"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            style="@style/WLView"
            android:layout_marginTop="5dp">

            <TextView
                style="@style/WView"
                android:layout_gravity="start"
                android:text="@string/txt_select_currency"
                android:textColor="@color/colorTxt"
                android:layout_marginEnd="5dp"
                android:textSize="15sp"
                android:layout_marginRight="5dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>


        <EditText
            android:id="@+id/edt_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/txt_price"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:text="@string/txt_dummy_amt"
            android:textColor="@color/colorTxt"
            android:textColorHint="@color/colorHint"
            android:textSize="19sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_guest_pay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btn_guest_pay"
            style="@style/VView"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="#009688"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/txt_pay_with_foloosi"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>